refactor: 나만의 목록 조회, 저장 목록 조회 정렬 메서드 분리